# VeriPresence

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: main.py  schemas.py
configs/: default.yaml
docs/: COMPARISON.md  MODEL_CARD.md  PRD.md
src/veripresence/: __init__.py  config.py
src/veripresence/alerts/: __init__.py  webhook.py
src/veripresence/data/: __init__.py  dataset.py  migrate.py  preprocessing.py  synthetic.py
src/veripresence/evaluation/: __init__.py  metrics.py
src/veripresence/inference/: __init__.py  camera.py  engine.py  quality.py
src/veripresence/models/: __init__.py  artifact.py  classifier.py  features.py
src/veripresence/storage/: __init__.py  repository.py
src/veripresence/training/: __init__.py  cli.py  trainer.py
src/veripresence/utils/: logging.py  seed.py
tests/: conftest.py  test_attendance_repository.py  test_dataset.py  test_inference.py  test_training.py
