[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veripresence"
version = "1.0.0"
description = "A reproducible face-attendance and unknown-person detection platform."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "VeriPresence Contributors" }]
dependencies = [
  "numpy>=1.26,<3",
  "opencv-python>=4.9,<5",
  "scikit-learn>=1.4,<2",
  "joblib>=1.3,<2",
  "PyYAML>=6,<7",
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.29,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "httpx>=0.27,<1",
  "ruff>=0.4,<1",
]

[project.scripts]
veripresence-train = "veripresence.training.cli:main"
veripresence-import = "veripresence.data.migrate:main"
veripresence-demo-data = "veripresence.data.synthetic:main"
veripresence-camera = "veripresence.inference.camera:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["B008"]
"tests/conftest.py" = ["E402"]
